fix: align sidebar toggle in archive/post page and etc., remove borders around blog titles in archive page

--- a/sass/base/_layout.scss
+++ b/sass/base/_layout.scss
@@ -165,7 +165,7 @@ aside.sidebar {
     .no-sidebar & { margin-right: 0; border-right: 0; }
     .collapse-sidebar & { margin-right: 20px; }
     > div, > article {
-      padding-top: $pad-medium/2;
+      //padding-top: $pad-medium/2;
       padding-bottom: $pad-medium/2;
       float: left;
     }
@@ -192,7 +192,7 @@ aside.sidebar {
   #content { margin-right: $sidebar-width-wide; }
   #content {
     > div, > article {
-      padding-top: $pad-wide/2;
+      //padding-top: $pad-wide/2;
       padding-bottom: $pad-wide/2;
     }
   }
