--- a/sass/partials/_archive.scss
+++ b/sass/partials/_archive.scss
@@ -3,6 +3,7 @@
 }
 #blog-archives {
   article {
+    border: none;
     padding: 1em 0 1em;
     position: relative;
     border: none;
